# anyset-oss

./: .gitignore  LICENSE  README.md  nx.json  package.json
.cursor/rules/: python-api-rule.mdc
.nx/workspace-data/: 43A63711-0C60-58AB-AE99-72FAEB611057.db  43A63711-0C60-58AB-AE99-72FAEB611057.db-shm  43A63711-0C60-58AB-AE99-72FAEB611057.db-wal  file-map.json  lockfile.hash  nx_files.nxt  parsed-lock-file.json  project-graph.json  source-maps.json
anyset-py-lib/: project.json  pyproject.toml
anyset-py-lib/anyset/adapters_repository_postgres/: adapter.py
anyset-py-lib/anyset/adapters_repository_snowflake/: adapter.py
anyset-py-lib/anyset/core/: dependencies.py
anyset-py-lib/core/api/: __init__.py  models.py
anyset-ts-react-lib/: .eslintrc.js  .prettierignore  .prettierrc.js  jest.config.js  jest.config.json  jest.setup.js  jest.setup.ts  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  tsup.config.ts
anyset-ts-react-lib/.husky/: pre-commit
anyset-ts-react-lib/src/: index.ts
anyset-ts-react-lib/src/api-integration/: api-integration.test.ts  api-integration.ts  index.ts  types.ts
anyset-ts-react-lib/src/components/DummyComponent/: DummyComponent.test.tsx  DummyComponent.tsx
anyset-ts-react-lib/src/components/DummyComponent/__snapshots__/: DummyComponent.test.tsx.snap
anyset-ts-react-lib/src/components/Table/: Table.spec.tsx  Table.tsx  Table.types.ts
app-definitions/: sample-pg.toml  sample-snowflake-basic.toml  sample-snowflake-pk.toml  sample.toml
apps/api/: .env  .env.example  README.md  main.py  project.json  pyproject.toml
apps/api/anyset/: __init__.py  controllers.py  dependencies.py  models.py  repository.py  repository_interface.py  settings.py  singleton_meta.py
apps/api/anyset/api/: __init__.py  routes.py
apps/api/anyset/postgres_adapter/: __init__.py  adapter.py  settings.py
apps/api/anyset/snowflake_adapter/: adapter.py  settings.py
apps/api/test/: conftest.py  test_basic.py
apps/api/test/anyset/: test_models.py  test_repository.py  test_repository_interface.py  test_singleton_meta.py
apps/api/tests/: conftest.py
apps/api/tests/anyset/: test_models.py  test_postgres_adapter.py  test_repository_interface.py  test_singleton_meta.py
apps/host/: package.json  project.json  rsbuild.config.ts  tsconfig.json
apps/host/@mf-types/remote/: Header.d.ts  apis.d.ts
apps/host/@mf-types/remote/compiled-types/components/Button/: Button.d.ts
apps/host/src/: App.tsx  app-types.d.ts  index.scss
apps/remote/: package.json  project.json  rsbuild.config.ts  tsconfig.json
apps/remote/src/: App.tsx  index.scss
apps/remote/src/components/Button/: Button.scss  Button.tsx
apps/remote/src/components/Header/: Header.scss  Header.tsx
apps/remote/src/styles/: _variables.scss
templates/environment/: .env.example
