[project]
name            = "api"
version         = "0.1.0"
description     = "FastAPI backend for microfrontend application"
authors         = []
dependencies    = ["fastapi==0.115.11", "uvicorn==0.34.0"]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["ruff>=0.3.0"]

[tool.rye]
managed          = true
dev-dependencies = ["ruff>=0.3.0"]

[tool.ruff]
line-length    = 100
target-version = "py312"

# Enable pycodestyle (E), Pyflakes (F), isort (I), and other recommended rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

ignore = [
    "E203", # whitespace before ':'
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
]

fixable   = ["ALL"]
unfixable = []

exclude = [ # Files to exclude from Ruff
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "__init__.py",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party = ["anyset"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
line-ending               = "auto"
skip-magic-trailing-comma = false
