[project]
name            = "api"
version         = "0.1.0"
description     = "FastAPI backend for microfrontend application"
authors         = []
dependencies    = [
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-slugify>=8.0.4",
    "tomli>=2.2.1",
    "orjson>=3.10.15",
    "psycopg2-binary>=2.9.10",
    "snowflake-connector-python>=3.14.0",
]
requires-python = ">=3.12"

[tool.ruff]
line-length    = 100
fix            = true
target-version = "py312"

# Enable pycodestyle (E), Pyflakes (F), isort (I), and other recommended rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]

ignore = [
    "E203", # whitespace before ':'
    "D203", # one-blank-line-before-class
    "D212", # multi-line-summary-first-line
]

exclude = [ # Files to exclude from Ruff
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "__init__.py",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
known-first-party          = ["anyset"]
combine-as-imports         = true
force-wrap-aliases         = true
force-sort-within-sections = true
section-order              = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style               = "double"
indent-style              = "space"
line-ending               = "auto"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "types-psycopg2>=2.9.21.20250318",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
addopts = """ \
--cov=anyset \
--cov-branch \
--cov-report=term-missing:skip-covered \
--cov-fail-under=80 \
test/
"""
